BackEnd/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backendcontainer
          image: "795674276339.dkr.ecr.ap-south-1.amazonaws.com/backend:latest"
          imagePullPolicy: Always
          ports:
            - name: tcp
              containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  #type: ClusterIP
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
