BackEnd/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: backend-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
   - host: ex.kops.cf
     http:
      paths:
      - backend:
          serviceName: backend-service
          servicePort: 8000
